--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
+html {
+    box-sizing: border-box;
+    font-size: 10px;
+    background: #8E24AA;
+    background: linear-gradient(45deg, #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+}
+
+.display {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#root {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: 20rem;
+    margin: 0;
+    color: white;
+    text-shadow: 4px 4px 0 rgba(0,0,0,0.05);
+}
+
 .App {
   text-align: center;
 }
