--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,11 @@ h1 {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.pointer {
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
